--- a/prices.html
+++ b/prices.html
@@ -64,7 +64,14 @@
                                     </li>
                                     <li class="nav-item"><a class="nav-link" href="shop.html">Каталог сайтов</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
-                                    <li class="nav-item"><a class="nav-link active" href="prices.html">Цены</a></li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"
+                                        aria-current="page" href="prices.html">Цены</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
+                                            <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
+                                        </ul>
+                                    </li>
                                     <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                                     <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                                     <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
@@ -129,42 +136,31 @@
         </section>
 
         <!-- Заголовок -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section py-5 dark-mode bg-color-black color-white mb-0">
             <div class="container">
                 <div class="row g-3 align-items-center">
-                    <div class="col-lg-8 text-center text-lg-start">
+                    <div class="col-lg-8">
                         <h1 class="h1">Цены на создание сайтов</h1>
-                    </div>
-                    <div class="col-lg-4 text-center text-lg-end">
-                        <a class="btn btn-black btn-lg" href="#"><svg width="32" height="32" viewBox="0 0 32 32"
-                                fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M7 26.3028V27.8397C7 28.4126 7.22756 28.962 7.63263 29.3671C8.0377 29.7723 8.5871 29.9999 9.16 30H25.84C26.4128 29.9999 26.9622 29.7723 27.3673 29.3673C27.7723 28.9622 27.9999 28.4128 28 27.84V9.5L20 2H9.16C8.58713 2 8.03773 2.22757 7.63265 2.63265C7.22757 3.03773 7 3.58713 7 4.16V15.2278C7 19.5625 7 18.9375 7 26.3028Z"
-                                    fill="#ECECF1" />
-                                <path
-                                    d="M28 9.93402L20 2V7.71966C20.0001 8.32442 20.2277 8.90438 20.6327 9.33201C21.0378 9.75963 21.5872 9.99992 22.16 10L28 9.93402Z"
-                                    fill="#D5D5DF" />
-                                <path
-                                    d="M4 17C4 15.8954 4.89543 15 6 15H23C24.1046 15 25 15.8954 25 17V24C25 25.1046 24.1046 26 23 26H6C4.89543 26 4 25.1046 4 24V17Z"
-                                    fill="url(#paint0_linear_289_3413)" />
-                                <path
-                                    d="M8.99672 18C9.40528 18 9.75894 18.0738 10.0577 18.2214C10.3608 18.369 10.5936 18.5786 10.7562 18.85C10.9187 19.1214 11 19.4429 11 19.8143C11 20.181 10.9187 20.5024 10.7562 20.7786C10.5936 21.05 10.3608 21.2595 10.0577 21.4071C9.75894 21.55 9.40528 21.6214 8.99672 21.6214H8.06755V22.6C8.06755 22.8209 7.90233 23 7.69852 23H7.36903C7.16522 23 7 22.8209 7 22.6V18.4C7 18.1791 7.16522 18 7.36903 18H8.99672ZM8.9374 20.6786C9.25811 20.6786 9.50193 20.6048 9.66887 20.4571C9.83581 20.3048 9.9193 20.0905 9.9193 19.8143C9.9193 19.5333 9.83581 19.319 9.66887 19.1714C9.50193 19.019 9.25811 18.9429 8.9374 18.9429H8.06755V20.6786H8.9374Z"
-                                    fill="white" />
-                                <path
-                                    d="M12 18.4C12 18.1791 12.178 18 12.3977 18H14.2585C14.7983 18 15.2741 18.1048 15.6861 18.3143C16.1027 18.519 16.4248 18.8095 16.652 19.1857C16.8841 19.5619 17 20 17 20.5C17 21 16.8841 21.4381 16.652 21.8143C16.4248 22.1905 16.1027 22.4833 15.6861 22.6929C15.2741 22.8976 14.7983 23 14.2585 23H12.3977C12.178 23 12 22.8209 12 22.6V18.4ZM14.2017 22.05C14.6988 22.05 15.0943 21.9119 15.3878 21.6357C15.6861 21.3548 15.8352 20.9762 15.8352 20.5C15.8352 20.0238 15.6861 19.6476 15.3878 19.3714C15.0943 19.0905 14.6988 18.95 14.2017 18.95H13.1505V22.05H14.2017Z"
-                                    fill="white" />
-                                <path
-                                    d="M19.2249 18.9286V20.25H21.2514C21.4852 20.25 21.6748 20.4291 21.6748 20.65V20.7786C21.6748 20.9995 21.4852 21.1786 21.2514 21.1786H19.2249V22.6C19.2249 22.8209 19.0354 23 18.8015 23H18.4234C18.1896 23 18 22.8209 18 22.6V18.4C18 18.1791 18.1896 18 18.4234 18H21.5766C21.8104 18 22 18.1791 22 18.4V18.5286C22 18.7495 21.8104 18.9286 21.5766 18.9286H19.2249Z"
-                                    fill="white" />
+                        <a class="btn btn-black btn-lg" href="#">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 26.3028V27.8397C7 28.4126 7.22756 28.962 7.63263 29.3671C8.0377 29.7723 8.5871 29.9999 9.16 30H25.84C26.4128 29.9999 26.9622 29.7723 27.3673 29.3673C27.7723 28.9622 27.9999 28.4128 28 27.84V9.5L20 2H9.16C8.58713 2 8.03773 2.22757 7.63265 2.63265C7.22757 3.03773 7 3.58713 7 4.16V15.2278C7 19.5625 7 18.9375 7 26.3028Z" fill="#ECECF1" />
+                                <path d="M28 9.93402L20 2V7.71966C20.0001 8.32442 20.2277 8.90438 20.6327 9.33201C21.0378 9.75963 21.5872 9.99992 22.16 10L28 9.93402Z" fill="#D5D5DF" />
+                                <path d="M4 17C4 15.8954 4.89543 15 6 15H23C24.1046 15 25 15.8954 25 17V24C25 25.1046 24.1046 26 23 26H6C4.89543 26 4 25.1046 4 24V17Z" fill="url(#paint0_linear_289_3413)" />
+                                <path d="M8.99672 18C9.40528 18 9.75894 18.0738 10.0577 18.2214C10.3608 18.369 10.5936 18.5786 10.7562 18.85C10.9187 19.1214 11 19.4429 11 19.8143C11 20.181 10.9187 20.5024 10.7562 20.7786C10.5936 21.05 10.3608 21.2595 10.0577 21.4071C9.75894 21.55 9.40528 21.6214 8.99672 21.6214H8.06755V22.6C8.06755 22.8209 7.90233 23 7.69852 23H7.36903C7.16522 23 7 22.8209 7 22.6V18.4C7 18.1791 7.16522 18 7.36903 18H8.99672ZM8.9374 20.6786C9.25811 20.6786 9.50193 20.6048 9.66887 20.4571C9.83581 20.3048 9.9193 20.0905 9.9193 19.8143C9.9193 19.5333 9.83581 19.319 9.66887 19.1714C9.50193 19.019 9.25811 18.9429 8.9374 18.9429H8.06755V20.6786H8.9374Z" fill="white" />
+                                <path d="M12 18.4C12 18.1791 12.178 18 12.3977 18H14.2585C14.7983 18 15.2741 18.1048 15.6861 18.3143C16.1027 18.519 16.4248 18.8095 16.652 19.1857C16.8841 19.5619 17 20 17 20.5C17 21 16.8841 21.4381 16.652 21.8143C16.4248 22.1905 16.1027 22.4833 15.6861 22.6929C15.2741 22.8976 14.7983 23 14.2585 23H12.3977C12.178 23 12 22.8209 12 22.6V18.4ZM14.2017 22.05C14.6988 22.05 15.0943 21.9119 15.3878 21.6357C15.6861 21.3548 15.8352 20.9762 15.8352 20.5C15.8352 20.0238 15.6861 19.6476 15.3878 19.3714C15.0943 19.0905 14.6988 18.95 14.2017 18.95H13.1505V22.05H14.2017Z" fill="white" />
+                                <path d="M19.2249 18.9286V20.25H21.2514C21.4852 20.25 21.6748 20.4291 21.6748 20.65V20.7786C21.6748 20.9995 21.4852 21.1786 21.2514 21.1786H19.2249V22.6C19.2249 22.8209 19.0354 23 18.8015 23H18.4234C18.1896 23 18 22.8209 18 22.6V18.4C18 18.1791 18.1896 18 18.4234 18H21.5766C21.8104 18 22 18.1791 22 18.4V18.5286C22 18.7495 21.8104 18.9286 21.5766 18.9286H19.2249Z" fill="white" />
                                 <defs>
-                                    <linearGradient id="paint0_linear_289_3413" x1="4" y1="20" x2="25" y2="20"
-                                        gradientUnits="userSpaceOnUse">
+                                    <linearGradient id="paint0_linear_289_3413" x1="4" y1="20" x2="25" y2="20" gradientUnits="userSpaceOnUse">
                                         <stop stop-color="#BA0FAC" />
                                         <stop offset="1" stop-color="#FF482F" />
                                     </linearGradient>
                                 </defs>
                             </svg>
-                            Прайс-лист PDF</a>
+                            <span>Презентация в PDF</span>
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        
                     </div>
                 </div>
             </div>
@@ -173,8 +169,18 @@
         <!-- Таблицы с ценами -->
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
+                <!-- Фильтр -->
+                <div class="d-flex justify-content-end py-3">
+                    <div class="dropdown">
+                        <button type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
+                            <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <!-- Услуга -->
-                <div class="mb-5">
+                <div class="price-service mb-5" id="plan-01">
                     <div class="d-flex align-items-center px-0 px-lg-3 mb-4">
                         <div class="flex-shrink-0 me-3">
                             <img src="img/price-rocket.gif" alt="">
@@ -229,7 +235,7 @@
                     </div>
                 </div>
                 <!-- Услуга -->
-                <div class="mb-5">
+                <div class="price-service mb-5" id="plan-02">
                     <div class="d-flex align-items-center px-0 px-lg-3 mb-4">
                         <div class="flex-shrink-0 me-3">
                             <img src="img/prices-usluga-02.png" alt="">
