fix prices page

--- a/prices.html
+++ b/prices.html
@@ -141,6 +141,8 @@
                 <div class="row g-3 align-items-center">
                     <div class="col-lg-8">
                         <h1 class="h1">Цены на создание сайтов</h1>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
                         <a class="btn btn-black btn-lg" href="#">
                             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M7 26.3028V27.8397C7 28.4126 7.22756 28.962 7.63263 29.3671C8.0377 29.7723 8.5871 29.9999 9.16 30H25.84C26.4128 29.9999 26.9622 29.7723 27.3673 29.3673C27.7723 28.9622 27.9999 28.4128 28 27.84V9.5L20 2H9.16C8.58713 2 8.03773 2.22757 7.63265 2.63265C7.22757 3.03773 7 3.58713 7 4.16V15.2278C7 19.5625 7 18.9375 7 26.3028Z" fill="#ECECF1" />
@@ -159,9 +161,6 @@
                             <span>Презентация в PDF</span>
                         </a>
                     </div>
-                    <div class="col-lg-4">
-                        
-                    </div>
                 </div>
             </div>
         </section>
@@ -172,7 +171,7 @@
                 <!-- Фильтр -->
                 <div class="d-flex justify-content-end py-3">
                     <div class="dropdown">
-                        <button type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
+                        <button type="button" class="btn btn-black-02 btn-lg dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
                             <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
