fix filter on prices page

--- a/prices.html
+++ b/prices.html
@@ -64,14 +64,7 @@
                                     </li>
                                     <li class="nav-item"><a class="nav-link" href="shop.html">Каталог сайтов</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-current="page" href="prices.html">Цены</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
-                                            <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
-                                        </ul>
-                                    </li>
+                                    <li class="nav-item"><a class="nav-link" href="prices.html">Цены</a></li>
                                     <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                                     <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                                     <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
@@ -169,10 +162,10 @@
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <!-- Фильтр -->
-                <div class="d-flex justify-content-end py-3">
+                <div class="d-none d-lg-flex justify-content-end py-3">
                     <div class="dropdown">
-                        <button type="button" class="btn btn-black-02 btn-lg dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
-                        <ul class="dropdown-menu">
+                        <button type="button" class="btn btn-black-02 dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
+                        <ul class="dropdown-menu w-100">
                             <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
                             <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
                         </ul>
