--- a/prices.html
+++ b/prices.html
@@ -165,7 +165,7 @@
                 <div class="d-none d-lg-flex justify-content-end py-3">
                     <div class="dropdown">
                         <button type="button" class="btn btn-black-02 dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Выбрать услугу</button>
-                        <ul class="dropdown-menu w-100">
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="prices.html#plan-01">План 1</a></li>
                             <li><a class="dropdown-item" href="prices.html#plan-02">План 2</a></li>
                         </ul>
